--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <button class="button-header">Login</button>
     </header>
     <main>
-        <img src="./img/We Care.png" alt="we-care-logo" class="logo-image"> 
+        <img src="./assets/We Care.png" alt="we-care-logo" class="logo-image"> 
 
         <section>
             <h1>WE CARE</h1>
